# goose-ui

./: Cargo.toml  index.html
src/: main.rs
src/components/: connector.rs  controls.rs  main.rs  mod.rs
src/services/: event_bus.rs  mod.rs  websocket.rs
