[package]
name = "goose_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
web-sys = { version = "0.3" }
wasm-bindgen = "0.2"
reqwasm = "0.5"
futures = "0.3"
wasm-bindgen-futures = "0.4.28"
log = "0.4.6"
wasm-logger = "0.2.0"
serde_json = "1.0.73"
serde = {version = "1.0", features=["derive"]}
yew-agent = "0.1.0"